# face-recognition-engine

./: README.md
backend-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend-api/app/: __init__.py  config.py  dependencies.py  main.py
backend-api/app/routes/: health.py  users.py  verification.py
backend-api/app/schemas/: __init__.py  user.py  verification.py
backend-api/app/services/: __init__.py  challenge_service.py  chroma_service.py  image_quality_service.py  liveness_service.py  mysql_service.py  opencv_service.py  session_service.py
backend-api/db/: init.sql
backend-api/lib/opencv5_native/: CMakeLists.txt
backend-api/lib/opencv5_native/include/: face_engine.hpp
backend-api/lib/opencv5_native/src/: bindings.cpp  face_engine.cpp
clients/: README.md
clients/mobile/: README.md  pubspec.yaml
clients/mobile/android/app/: build.gradle.kts
clients/mobile/ios/Runner/: Info.plist
clients/mobile/ios/Runner.xcodeproj/: project.pbxproj
clients/mobile/lib/: app.dart  main.dart
clients/mobile/lib/models/: user.dart  verification_log.dart
clients/mobile/lib/pages/: enroll_page.dart  logs_page.dart  user_selection_page.dart  verify_page.dart
clients/mobile/test/: widget_test.dart
clients/web/: README.md  package-lock.json  package.json
clients/web/app/: globals.css  layout.tsx  page.tsx
clients/web/components/: VerifyFAB.tsx  VerifyModal.tsx
clients/web/lib/: api.ts  client-liveness.ts
docs/: face_recognition_api.postman_collection.json  finding-report-opencv-mediapipe-comparison.md  setup.md
(+10 files in other folders)
